force-app/main/default/objects/CampaignMember/fields/Bounces__c.field-meta.xml
<CustomField>
    <fullName>Bounces__c</fullName>
    <description>Bounces</description>
    <label>Bounces</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>