force-app/main/default/objects/CampaignMember/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <description>Clicks</description>
    <label>Clicks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>