force-app/main/default/objects/CampaignMember/fields/EmailEvents__c.field-meta.xml
<CustomField>
    <fullName>EmailEvents__c</fullName>
    <description>This field will be used to store email events with timestamp such as open, click, etc.</description>
    <label>Email Events</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>