force-app/main/default/objects/CampaignMember/fields/Opens__c.field-meta.xml
<CustomField>
    <fullName>Opens__c</fullName>
    <description>Opens</description>
    <label>Opens</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>